@@ -523,7 +523,13 @@ std::pair<map_location,map_location> ai::choose_move(std::vector<target>& target
 
 			//scouts also get a bonus for going after villages
 			if(tg->type == target::VILLAGE) {
-				rating *= lexical_cast_default<int>(current_team().ai_parameters()["scout_village_targeting"],3);
+				if(current_team().ai_parameters().has_attribute("scout_village_targetting")) {
+					rating *= lexical_cast_default<int>(current_team().ai_parameters()["scout_village_targetting"],3);
+					lg::wml_error << "[ai] the 'scout_village_targetting' attribute is deprecated, support will be removed in version 1.7.0; use 'scout_village_targetting' instead\n";
+				}
+				else {
+					rating *= lexical_cast_default<int>(current_team().ai_parameters()["scout_village_targeting"],3);
+				}
 			}
 		}
 
@@ -551,7 +557,15 @@ std::pair<map_location,map_location> ai::choose_move(std::vector<target>& target
 	//if we have the 'simple_targeting' flag set, then we don't
 	//see if any other units can put a better bid forward for this
 	//target
-	const bool dumb_ai = utils::string_bool(current_team().ai_parameters()["simple_targeting"]);
+	bool simple_targeting = false;
+	if(current_team().ai_parameters().has_attribute("simple_targetting")) {
+		simple_targeting = utils::string_bool(current_team().ai_parameters()["simple_targetting"]);
+		lg::wml_error << "[ai] the 'simple_targetting' attribute is deprecated, support will be removed in version 1.7.0; use 'simple_targeting' instead\n";
+	}
+	else {
+		simple_targeting = utils::string_bool(current_team().ai_parameters()["simple_targeting"]);
+	}
+	const bool& dumb_ai = simple_targeting;
 
 	if(dumb_ai == false) {
 		LOG_AI << "complex targeting...\n";
